kubernetes/personal/applications/tanya/service.yaml
---

apiVersion: v1
kind: Service

metadata:
  name: tanya
  namespace: tanya
  labels:
    app: tanya

spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      protocol: TCP
      targetPort: http
  selector:
    app: tanya
